--- a/index.html
+++ b/index.html
@@ -16,20 +16,20 @@
         <header>
             <ul>
 
-                <a href="#an" class="nav-link">
-                    <li>an</li>
+                <a href="#intro" class="nav-link">
+                    <li>Introduction</li>
                 </a>
-                <a href="#ar" class="nav-link">
-                    <li>ar</li>
+                <a href="#pre" class="nav-link">
+                    <li>What you should already know</li>
                 </a>
-                <a href="#ab" class="nav-link">
-                    <li>ab</li>
+                <a href="#js" class="nav-link">
+                    <li>JavaScript and Java</li>
                 </a>
-                <a href="#cda" class="nav-link">
-                    <li>cda</li>
+                <a href="#hello" class="nav-link">
+                    <li>Hello world</li>
                 </a>
-                <a href="#afg" class="nav-link">
-                    <li>afg</li>
+                <a href="#vars" class="nav-link">
+                    <li>Variables</li>
                 </a>
                 <a href="#vars-dec">
                     <li>
@@ -48,7 +48,7 @@
                 </a>
                 <a href="#const">
                     <li>
-                        Constants
+                        constants
                     </li>
                 </a>
                 <a href="#data">
@@ -79,9 +79,9 @@
     </header>
     <main id="main-doc">
 
-        <section class="main-section" id="an">
-            <header id="adsssfa">an</header>
-            <h2 id="intro">Introduction</h2>
+        <section class="main-section" id="intro">
+            <header id="introduction">
+                <h2 id="introduction">Introduction</h2>
             </header>
             <p id="1">JavaScript is a cross-platform, object-oriented scripting language. It is a small and lightweight language. Inside a host environment (for example, a web browser), JavaScript can be connected to the objects of its environment to provide programmatic
                 control over them.</p>
@@ -96,28 +96,27 @@
                 it with additional objects; for example:</p>
 
             <ul id="3">
-                <li id="22"> Client-side JavaScript extends the core language by supplying objects to control a browser and its Document Object Model (DOM). For example, client-side extensions allow an application to place elements on an HTML form and respond to user
-                    events such as mouse clicks, form input, and page navigation.</li>
+                <li id="22"> Client-side JavaScript extends the core language by supplying objects to control a browser and its Document Object Model (DOM). For example, client-side extensions allow intro application to place elements on intro HTML form and respond
+                    to user events such as mouse clicks, form input, and page navigation.</li>
                 <li id="21"> Server-side JavaScript extends the core language bu supplying objects relevant to running JavaScript on a server. For example, server-side extensions allow an application to communicate with a database, provide continuity of information
                     from one invocation to another of the application, or perform file manipulations on a server.</li>
             </ul>
         </section>
         <section class="main-section" id="ar">
-            <header id="aa">ar</header>
-            <header id="addffa">
+
+            <header id="know">
                 <h2 id="know">What you should already know</h2>
             </header>
             <p id="5">This guide assumes you have the following basic background:</p>
             <ul id="6">
                 <li id="18"> A general understanding of the Internet and the World Wide Web (WWW).</li>
-                <li id="19"> Good working knowledge of HyperText Markup Language (HTML).</li>
+                <li id="19"> Good working knowledge of HyperText Markup language (HTML).</li>
                 <li id="20"> Some programming experience. If you are new to programming, try one of the tutorials linked on the main page about JavaScript.</li>
             </ul>
         </section>
         <section class="main-section" id="ab">
-            <header id="aadfdda">ab</header>
             <header id="JavaScript_and_Java">
-                <h2 id="java">JavaScript and Java</h2>1
+                <h2 id="java">JavaScript and Java</h2>
                 <header>
                     <p id="8">JavaScript and Java are similar in some ways but fundamentally different in some others. The JavaScript language resembles Java but does not have Java's static typing and strong type checking. JavaScript follows most Java expression
                         syntax, naming conventions and basic control-flow constructs which was the reason why it was renamed from LiveScript to JavaScript.</p>
@@ -129,17 +128,15 @@
                     <p id="17">JavaScript is a very free-form language compared to Java. You do not have to declare all variables, classes, and methods. You do not have to be concerned with whether methods are public, private, or protected, and you do not have to
                         implement interfaces. Variables, parameters, and function return types are not explicitly typed.</p>
         </section>
-        <section class="main-section" id="cda">
-            <header id="adda">cda</header>
+        <section class="main-section" id="hello">
             <header id="Hello_world">
                 <h2 id="hello-world">Hello world</h2>
             </header>
             <p id="10">To get started with writing JavaScript, open the Scratchpad and write your first "Hello world " JavaScript code:</p>
             <p class="code " id="11">function greetMe(yourName) { alert("Hello " + yourName); } greetMe("World ");</p>
-            <p id="16">Select the codein the pad and hit Ctrl+R to watch it unfold in your browser!</p>
+            <p id="16">Select the code in the pad and hit Ctrl+R to watch it unfold in your browser!</p>
         </section>
-        <section class="main-section" id="afg">
-            <header id="affa">afg</header>
+        <section class="main-section" id="vars">
             <header id="Variables">
                 <h2 id="vars">Variables</h2>
             </header>
@@ -148,8 +145,7 @@
             <p id="14">A JavaScript identifier must start with a letter, underscore (_), or dollar sign ($); subsequent characters can also be digits (0-9). Because JavaScript is case sensitive, letters include the characters "A " through "Z " (uppercase) and the
                 characters "a " through "z " (lowercase).</p>
 
-            <p id="15">You can use ISO 8859-1 or Unicode letters such as å and ü in identifiers. You can also use the Unicodeescape sequences as characters in identifiers. You can also use the Unicodeescape sequences as characters in identifiers. Some examples of
-                legal names are Number_hits, temp99, and _name.</p>
+            <p id="15">You can use ISO 8859-1 or Unicode letters such as å and ü in identifiers. You can also use the Unicode escape sequences as characters in identifiers. Some examples of legal names are Number_hits, temp99, and _name.</p>
         </section>
         <section>
             <h2 id="vars-dec">Declaring variables</h2>
@@ -160,7 +156,7 @@
             <p>This syntax can be used to declare both local and global variables.</p>
 
             <p>By simply assigning it a value. For example, </p>
-            <p class="code ">x=42.</p>
+            <p class="code ">x = 42.</p>
             <p>This always declares a global variable. It generates a strict JavaScript warning. You shouldn't use this variant.</p>
 
             <p>With the keyword let. For example,</p>
@@ -169,11 +165,11 @@
         </section>
         <section>
             <h2 id="scope">Variable scope</h2>
-            <p>When you declare a variable outside of any function, it is called a global variable, because it is available to any other codein the current document. When you declare a variable within a function, it is called a local variable, because it
+            <p>When you declare a variable outside of any function, it is called a global variable, because it is available to any other code in the current document. When you declare a variable within a function, it is called a local variable, because it
                 is available only within that function.</p>
 
-            <p>JavaScript before ECMAScript 2015 does not have block statement scope; rather, a variable declared within a block is local to the function (or global scope) that the block resides within. For example the following codewill log 5, because the
-                scope of x is the function (or global context) within which x is declared, not the block, which in this case is an if statement.</p>
+            <p>JavaScript before ECMAScript 2015 does not have block statement scope; rather, a variable declared within a block is local to the function (or global scope) that the block resides within. For example the following code will log 5, because
+                the scope of x is the function (or global context) within which x is declared, not the block, which in this case is an if statement.</p>
             <p class="code ">if (true) { var x = 5; } console.log(x); // 5</p>
             <p>This behavior changes, when using the let declaration introduced in ECMAScript 2015.</p>
             <p class="code ">if (true) { let y = 5; } console.log(y); // ReferenceError: y is not defined</p>
@@ -228,11 +224,11 @@
             <p class="code ">if (condition_1) { statement_1; } else if (condition_2) { statement_2; } else if (condition_n) { statement_n; } else { statement_last; }</p>
             <p>In the case of multiple conditions only the first logical condition which evaluates to true will be executed. To execute multiple statements, group them within a block statement ({ ... }) . In general, it's good practice to always use block
                 statements, especially when nesting if statements: </p>
-            <p>if (condition) { statement_1_runs_if_condition_is_true; statement_2_runs_if_condition_is_true; } else { statement_3_runs_if_condition_is_false; statement_4_runs_if_condition_is_false; }</p>
-            <p> It is advisable to not use simple assignments in a conditional expression, because the assignment can be confused with equality when glancing over the code. For example, do not use the following code: </p>
-            <p class="code ">if (x = y) { /* statements here */ }</p>
-            <p> If you need to use an assignment in a conditional expression, a common practice is to put additional parentheses around the assignment. For example: </p>
-            <p class="code ">if ((x = y)) { /* statements here */ }</p>
+            <p>if (condition) { console.log("🚀 ~ file: index.html:229 ~ condition:", condition) }
+                <p> It is advisable to not use simple assignments in a conditional expression, because the assignment can be confused with equality when glancing over the code. For example, do not use the following code: </p>
+                <p class="code ">if (x = y) { /* statements here */ }</p>
+                <p> If you need to use an assignment in a conditional expression, a common practice is to put additional parentheses around the assignment. For example: </p>
+                <p class="code ">if ((x = y)) { /* statements here */ }</p>
         </section>
         <section>
             <h2 id="while">while statement</h2>
@@ -263,12 +259,13 @@
                 <li> A list of arguments to the function, enclosed in parentheses and separated by commas. </li>
                 <li> The JavaScript statements that define the function, enclosed in curly brackets, {}. </li>
             </ul>
-            <p> For example, the following codedefines a simple function named square: </p>
+            <p> For example, the following code defines a simple function named square: </p>
             <p class="code ">function square(number) { return number * number; }</p>
             <p>The function square takes one argument, called number. The function consists of one statement that says to return the argument of the function (that is, number) multiplied by itself. The return statement specifies the value returned by the
                 function. </p>
             <p class="code ">return number * number;</p>
-            <p> Primitive parameters (such as a number) are passed to functions by value; the value is passed to the function, but if the function changes the value of the parameter, this change is not reflected globally or in the calling function. </p>
+            <p> Primitive parameters (such as a number) are passed to functions by value; the value is passed to the function, but if the function changes the value of the parameter, this change is not reflected globally or in the calling function.
+            </p>
         </section>
         <footer>
             <h2 id="reference">Reference </h2>
