--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <nav id="navbar">
-        </p>
+
         <h2>JS Documentation</h2>
         <header>
             <ul>
@@ -75,8 +75,9 @@
                     </li>
                 </a>
             </ul>
+        </header>
     </nav>
-    </header>
+
     <main id="main-doc">
 
         <section class="main-section" id="intro">
@@ -224,7 +225,7 @@
             <p class="code ">if (condition_1) { statement_1; } else if (condition_2) { statement_2; } else if (condition_n) { statement_n; } else { statement_last; }</p>
             <p>In the case of multiple conditions only the first logical condition which evaluates to true will be executed. To execute multiple statements, group them within a block statement ({ ... }) . In general, it's good practice to always use block
                 statements, especially when nesting if statements: </p>
-            <p>if (condition) { console.log("🚀 ~ file: index.html:229 ~ condition:", condition) }
+            <p>if (condition)
                 <p> It is advisable to not use simple assignments in a conditional expression, because the assignment can be confused with equality when glancing over the code. For example, do not use the following code: </p>
                 <p class="code ">if (x = y) { /* statements here */ }</p>
                 <p> If you need to use an assignment in a conditional expression, a common practice is to put additional parentheses around the assignment. For example: </p>
