--- a/index.html
+++ b/index.html
@@ -16,55 +16,55 @@
         <header>
             <ul>
 
-                <a href="#intro" class="nav-link">
+                <a href="#Introduction" class="nav-link">
                     <li>Introduction</li>
                 </a>
-                <a href="#pre" class="nav-link">
+                <a href="#What_you_should_already_know" class="nav-link">
                     <li>What you should already know</li>
                 </a>
-                <a href="#js" class="nav-link">
+                <a href="#JavaScript_and_Java" class="nav-link">
                     <li>JavaScript and Java</li>
                 </a>
-                <a href="#hello" class="nav-link">
+                <a href="#Hello_world" class="nav-link">
                     <li>Hello world</li>
                 </a>
-                <a href="#vars" class="nav-link">
+                <a href="#Variables" class="nav-link">
                     <li>Variables</li>
                 </a>
-                <a href="#vars-dec">
+                <a href="#Declaring_variables" class="nav-link">
                     <li>
                         Declaring variables
                     </li>
                 </a>
-                <a href="#scope">
+                <a href="#Variable_scope" class="nav-link">
                     <li>
                         Variable scope
                     </li>
                 </a>
-                <a href="#global">
+                <a href="#Global_variables" class="nav-link">
                     <li>
                         Global variables
                     </li>
                 </a>
-                <a href="#const">
+                <a href="#Constants" class="nav-link">
                     <li>
-                        constants
+                        Constants
                     </li>
                 </a>
-                <a href="#data">
+                <a href="#Data_types" class="nav-link">
                     <li>
                         Data types
                     </li>
                 </a>
-                <a href="#if">
+                <a href="#if_else_statement" class="nav-link">
                     <li>
-                        if...else statement
+                        if else statement
                     </li>
                 </a>
-                <a href="#while">
+                <a href="#while_statement" class="nav-link">
                     <li>while statement</li>
                 </a>
-                <a href="#function">
+                <a href="#Function_declarations" class="nav-link">
                     <li>
                         Function declarations
                     </li>
@@ -80,9 +80,8 @@
 
     <main id="main-doc">
 
-        <section class="main-section" id="intro">
-            <header id="introduction">
-                <h2 id="introduction">Introduction</h2>
+        <section class="main-section" id="Introduction">
+            <header id="introduction">Introduction
             </header>
             <p id="1">JavaScript is a cross-platform, object-oriented scripting language. It is a small and lightweight language. Inside a host environment (for example, a web browser), JavaScript can be connected to the objects of its environment to provide programmatic
                 control over them.</p>
@@ -103,10 +102,10 @@
                     from one invocation to another of the application, or perform file manipulations on a server.</li>
             </ul>
         </section>
-        <section class="main-section" id="ar">
+        <section class="main-section" id="What_you_should_already_know">
 
-            <header id="know">
-                <h2 id="know">What you should already know</h2>
+            <header id="What_you_should_already_know">
+                What you should already know
             </header>
             <p id="5">This guide assumes you have the following basic background:</p>
             <ul id="6">
@@ -115,31 +114,29 @@
                 <li id="20"> Some programming experience. If you are new to programming, try one of the tutorials linked on the main page about JavaScript.</li>
             </ul>
         </section>
-        <section class="main-section" id="ab">
-            <header id="JavaScript_and_Java">
-                <h2 id="java">JavaScript and Java</h2>
-                <header>
-                    <p id="8">JavaScript and Java are similar in some ways but fundamentally different in some others. The JavaScript language resembles Java but does not have Java's static typing and strong type checking. JavaScript follows most Java expression
-                        syntax, naming conventions and basic control-flow constructs which was the reason why it was renamed from LiveScript to JavaScript.</p>
+        <section class="main-section" id="JavaScript_and_Java">
+            <header id="JavaScript_and_Java">JavaScript and Java
+            </header>
+            <p id="8">JavaScript and Java are similar in some ways but fundamentally different in some others. The JavaScript language resembles Java but does not have Java's static typing and strong type checking. JavaScript follows most Java expression syntax,
+                naming conventions and basic control-flow constructs which was the reason why it was renamed from LiveScript to JavaScript.</p>
 
-                    <p id="9">In contrast to Java's compile-time system of classes built by declarations, JavaScript supports a runtime system based on a small number of data types representing numeric, Boolean, and string values. JavaScript has a prototype-based
-                        object model instead of the more common class-based object model. The prototype-based model provides dynamic inheritance; that is, what is inherited can vary for individual objects. JavaScript also supports functions without any
-                        special declarative requirements. Functions can be properties of objects, executing as loosely typed methods.</p>
+            <p id="9">In contrast to Java's compile-time system of classes built by declarations, JavaScript supports a runtime system based on a small number of data types representing numeric, Boolean, and string values. JavaScript has a prototype-based object
+                model instead of the more common class-based object model. The prototype-based model provides dynamic inheritance; that is, what is inherited can vary for individual objects. JavaScript also supports functions without any special declarative
+                requirements. Functions can be properties of objects, executing as loosely typed methods.</p>
 
-                    <p id="17">JavaScript is a very free-form language compared to Java. You do not have to declare all variables, classes, and methods. You do not have to be concerned with whether methods are public, private, or protected, and you do not have to
-                        implement interfaces. Variables, parameters, and function return types are not explicitly typed.</p>
+            <p id="17">JavaScript is a very free-form language compared to Java. You do not have to declare all variables, classes, and methods. You do not have to be concerned with whether methods are public, private, or protected, and you do not have to implement
+                interfaces. Variables, parameters, and function return types are not explicitly typed.</p>
         </section>
-        <section class="main-section" id="hello">
-            <header id="Hello_world">
-                <h2 id="hello-world">Hello world</h2>
+        <section class="main-section" id="Hello_world">
+            <header id="Hello_world">Hello world
             </header>
             <p id="10">To get started with writing JavaScript, open the Scratchpad and write your first "Hello world " JavaScript code:</p>
             <p class="code " id="11">function greetMe(yourName) { alert("Hello " + yourName); } greetMe("World ");</p>
             <p id="16">Select the code in the pad and hit Ctrl+R to watch it unfold in your browser!</p>
         </section>
-        <section class="main-section" id="vars">
+        <section class="main-section" id="Variables">
             <header id="Variables">
-                <h2 id="vars">Variables</h2>
+                Variables
             </header>
             <p id="13">You use variables as symbolic names for values in your application. The names of variables, called identifiers, conform to certain rules.</p>
 
@@ -148,8 +145,9 @@
 
             <p id="15">You can use ISO 8859-1 or Unicode letters such as å and ü in identifiers. You can also use the Unicode escape sequences as characters in identifiers. Some examples of legal names are Number_hits, temp99, and _name.</p>
         </section>
-        <section>
-            <h2 id="vars-dec">Declaring variables</h2>
+        <section class="main-section" id="Declaring_variables">
+            <header id="Declaring_variables">Declaring variables
+            </header>
             <p>You can declare a variable in three ways:</p>
 
             <p>With the keyword var. For example,</p>
@@ -164,8 +162,9 @@
             <p class="code ">let y = 13.</p>
             <p>This syntax can be used to declare a block scope local variable. See Variable scope below.</p>
         </section>
-        <section>
-            <h2 id="scope">Variable scope</h2>
+        <section class="main-section" id="Variable_scope">
+            <header id="Variable_scope">Variable scope
+            </header>
             <p>When you declare a variable outside of any function, it is called a global variable, because it is available to any other code in the current document. When you declare a variable within a function, it is called a local variable, because it
                 is available only within that function.</p>
 
@@ -175,15 +174,17 @@
             <p>This behavior changes, when using the let declaration introduced in ECMAScript 2015.</p>
             <p class="code ">if (true) { let y = 5; } console.log(y); // ReferenceError: y is not defined</p>
         </section>
-        <section>
-            <h2 id="global">Global variables</h2>
+        <section class="main-section" id="Global_variables">
+            <header id="Global_variables">Global variables
+            </header>
             <p>Global variables are in fact properties of the global object. In web pages the global object is window, so you can set and access global variables using the window.variable syntax.</p>
 
             <p>Consequently, you can access global variables declared in one window or frame from another window or frame by specifying the window or frame name. For example, if a variable called phoneNumber is declared in a documentm you can refer to this
                 variable from an iframe as parent.phoneNumber.</p>
         </section>
-        <section>
-            <h2 id="const">Constants</h2>
+        <section class="main-section" id="Constants">
+            <header id="Constants">Constants
+            </header>
             <p>You can create a read-only, named constant with the const keyword. The syntax of a constant identifier is the same as for a variable identifier: it must start with a letter, underscore or dollar sign and can contain alphabetic, numeric, or
                 underscore characters.</p>
             <p class="code ">const PI = 3.14;</p>
@@ -196,8 +197,9 @@
             <p>However, object attributes are not protected, so the following statement is executed without problems.</p>
             <p class="code ">const MY_OBJECT = {"key ": "value "}; MY_OBJECT.key = "otherValue ";</p>
         </section>
-        <section>
-            <h2 id="data">Data types</h2>
+        <section class="main-section" id="Data_types">
+            <header id="Data_types">Data types
+            </header>
             <p>The latest ECMAScript standard defines seven data types:</p>
             <ul>
                 <li> Six data types that are primitives:
@@ -215,8 +217,8 @@
             <p>Although these data types are a relatively small amount, they enable you to perform useful functions with your applications. Objects and functions are the other fundamental elements in the language. You can think of objects as named containers
                 for values, and functions as procedures that your application can perform.</p>
         </section>
-        <section>
-            <h2 id="if">if...else statement</h2>
+        <section class="main-section" id="if_else_statement">
+            <header id="if_else_statement">if else statement</header>
             <p>Use the if statement to execute a statement if a logical condition is true. Use the optional else clause to execute a statement if the condition is false. An if statement looks as follows:</p>
             <p class="code ">if (condition) { statement_1; } else { statement_2; }</p>
             <p>condition can be any expression that evaluates to true or false. See Boolean for an explanation of what evaluates to true and false. If condition evaluates to true, statement_1 is executed; otherwise, statement_2 is executed. statement_1 and
@@ -231,8 +233,9 @@
                 <p> If you need to use an assignment in a conditional expression, a common practice is to put additional parentheses around the assignment. For example: </p>
                 <p class="code ">if ((x = y)) { /* statements here */ }</p>
         </section>
-        <section>
-            <h2 id="while">while statement</h2>
+        <section class="main-section" id="while_statement">
+            <header id="while_statement">while statement
+            </header>
             <p>A while statement executes its statements as long as a specified condition evaluates to true. A while statement looks as follows:</p>
             <p class="code ">while (condition) statement</p>
             <p>If the condition becomes false, statement within the loop stops executing and control passes to the statement following the loop. </p>
@@ -252,8 +255,10 @@
             </p>
             <p>After completing the third pass, the condition n &lt; 3 is no longer true, so the loop terminates. </p>
         </section>
-        <section>
-            <h2 id="function">Function declarations</h2>
+        <section class="main-section" id="Function_declarations">
+            <header id="Function_declarations">Function declarations
+            </header>
+
             <p>A function definition (also called a function declaration, or function statement) consists of the function keyword, followed by: </p>
             <ul>
                 <li> The name of the function. </li>
